# Gruppe32

./: .ghc.environment.x86_64-mingw32-9.6.7  .gitignore  Backlog.md  CLI.hs  DataHandler.hs  Insert.hs  Main.hs  README.md  Record.hs  Shell.hs  Types.hs  data.json  data_2025-12-02_17-32-44.bak.json  grp32.cabal  output.json
docs/: Backlog.md  Entwickler_Handbuch.md
src/: CLI.hs  DataHandler.hs  Main.hs  Shell.hs  Types.hs
tests/: generate_data.py  test_suite.py
