cabal-version: 1.12
name:           grp32
version:        0.1.0.0
build-type:     Simple
library
  exposed-modules:
      CLI
      DataHandler
      Shell
      Types
  hs-source-dirs:
      src
  build-depends:
      base
    , aeson
    , aeson-pretty
    , bytestring
    , filepath
    , text
    , time
  default-language: Haskell2010

executable grp32-exe
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , aeson
    , aeson-pretty
    , bytestring
    , filepath
    , text
    , time
    , grp32
  default-language: Haskell2010